# calculator-API

./: Add.hs  Application.hs  Calc.hs  Divide.hs  Home.hs  Kalk.cabal  Kalk_DB.db  Main.hs  Multi.hs  Power.hs  README.md  Sqrt.hs  Square.hs  Sub.hs  client_session_key.aes  database.hs  routes
