name:               Kalk
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          Kalk
  main-is:          Main.hs
  other-modules:    Application
                    Foundation

                    Add
                    Home
                    Sub
                    Multi
                    Divide
                    Calc


  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod-core , aeson, sqlite-simple

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
